app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-rgb: 255, 255, 255;
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-rgb));
}

@layer base {
  h1 {
    @apply text-4xl font-semibold tracking-tight;
  }
  h2 {
    @apply text-3xl font-medium tracking-tight;
  }
  h3 {
    @apply text-2xl font-medium;
  }
  p {
    @apply text-gray-600;
  }
}

@layer components {
  .btn-primary {
    @apply rounded-md bg-green-600 px-4 py-2 text-sm font-medium text-white hover:bg-opacity-90 transition-opacity;
  }
  .btn-secondary {
    @apply rounded-md border border-gray-200 px-4 py-2 text-sm font-medium text-gray-600 hover:bg-gray-50 transition-colors;
  }
  .input-primary {
    @apply w-full rounded-xl border-2 border-gray-200 bg-transparent px-4 py-3 text-gray-900 outline-none transition-colors focus:border-green-600;
  }
}

